--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,1 @@
-numpy>=1.24.0
-scikit-learn>=1.3.0
-tqdm>=4.66.0
-sentence-transformers>=3.0.0
+numpy>=1.24.0scikit-learn>=1.3.0tqdm>=4.66.0sentence-transformers>=3.0.0joblib>=1.2.0threadpoolctl>=3.1.0scipy>=1.8.0
